// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProposalCard ProposalCard Renders properly with data 1`] = `
.c11 {
  font-family: 'Inter',-apple-system,BlinkMacSystemFont,'Segoe UI','Roboto','Oxygen','Ubuntu','Cantarell','Fira Sans','Droid Sans','Helvetica Neue',sans-serif;
  font-size: 20px;
  line-height: 1.2;
  font-weight: 600;
}

.c1 {
  box-sizing: 'border-box';
  min-width: 0;
  margin: 0;
  padding: 0;
}

.c2 {
  border: 1px solid #303338;
  border-radius: 10px;
  margin-bottom: 1rem;
  padding: 1rem;
  color: #BDC0C7;
}

.c2:hover {
  border-color: #fff;
  color: #fff;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c10 {
  margin: 1rem 0;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c12 {
  font-size: 1rem;
  font-weight: 700;
  color: #fff;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c5 {
  font-size: 0.95rem;
  font-weight: 600;
  margin-left: 0.5rem;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-right: 24px;
  position: relative;
  overflow-x: hidden;
}

.c14::before {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  width: 100%;
  height: 100%;
  background: linear-gradient(to right,transparent 89%,#1B1D1F 100%);
}

.c14 > div {
  margin: 4px 2px;
}

.c16 {
  border: 1px solid #303338;
  border-radius: 1rem;
  padding: 0.25rem 0.8rem;
  -webkit-flex: none;
  -ms-flex: none;
  flex: none;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
}

.c17 {
  width: 1.5rem;
  height: 1.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: 0.5rem;
  margin-right: 0.5rem;
}

.c15 {
  min-width: unset;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c7 {
  font-size: 0.8rem;
  font-weight: 600;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c9 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin: 0.5rem;
  border-radius: 15px;
  border: 1px solid #1DE9B6;
  background-color: #1B1D1F;
  color: #1DE9B6;
  padding: 0.25rem 0.4rem;
}

.c8 {
  padding: 0 0.2rem;
}

.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
}

.c0:focus,
.c0:hover,
.c0:visited,
.c0:link,
.c0:active {
  -webkit-text-decoration: none;
  text-decoration: none;
}

@media only screen and (max-width:524px) {
  .c13 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-align-items: flex-start;
    -webkit-box-align: flex-start;
    -ms-flex-align: flex-start;
    align-items: flex-start;
  }
}

@media only screen and (min-width:768px) {
  .c12 {
    font-size: 1.25rem;
  }
}

@media only screen and (max-width:524px) {
  .c14 {
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    border-bottom: 1px solid #303338;
    margin-bottom: 0.5rem;
    padding-bottom: 0.5rem;
  }

  .c14 > div:nth-child(n + 3) {
    display: none;
  }

  .c14::before {
    content: none;
  }
}

@media only screen and (min-width:768px) {
  .c8 {
    padding-right: 0.5rem;
  }
}

<div>
   
  <a
    class="c0"
    data-testid="proposal-card"
    href="/testUrl"
  >
    <div
      class="c1 c2"
    >
      <div
        class="c1 c3"
      >
        <div
          class="c1 c4"
        >
          <div
            class="paper"
            style="border-radius: 50px; display: inline-block; margin: 0px; overflow: hidden; padding: 0px; background-color: rgb(245, 228, 0); height: 24px; width: 24px;"
          >
            <svg
              height="24"
              width="24"
              x="0"
              xmlns="http://www.w3.org/2000/svg"
              y="0"
            >
              <rect
                fill="#F2BE02"
                height="24"
                rx="0"
                ry="0"
                transform="translate(4.11204385070503 -3.89652025148055) rotate(387.1 12 12)"
                width="24"
                x="0"
                y="0"
              />
              <rect
                fill="#01778E"
                height="24"
                rx="0"
                ry="0"
                transform="translate(-1.9540919563657109 12.528454691642345) rotate(227.4 12 12)"
                width="24"
                x="0"
                y="0"
              />
              <rect
                fill="#C81435"
                height="24"
                rx="0"
                ry="0"
                transform="translate(13.477268130678231 -9.444486788922836) rotate(422.3 12 12)"
                width="24"
                x="0"
                y="0"
              />
              <rect
                fill="#FA9600"
                height="24"
                rx="0"
                ry="0"
                transform="translate(14.838094142329384 -25.57490104209306) rotate(308.5 12 12)"
                width="24"
                x="0"
                y="0"
              />
            </svg>
          </div>
          <div
            class="c1 c5"
          >
            venky0x.eth
          </div>
        </div>
        <div
          class="c6"
        >
          <div
            class="c7"
          >
            <div
              class="c1 c8"
            >
              <span
                title="May 9th, 2022 - 8:00 am"
              >
                Time
              </span>
            </div>
            <div
              class="c1 c9"
            >
               
              Active
            </div>
          </div>
        </div>
      </div>
      <div
        class="c1 c10"
      >
        <h2
          class="c11 c12"
          size="2"
        >
          <strong>
            SWPR single reward campaign
          </strong>
        </h2>
      </div>
      <div
        class="c1 c13"
      >
        <div
          class="c1 c14"
        />
        <div
          class="c1 c15"
        >
          <div
            class="c1 c4 c16"
          >
            <div
              class="c1 c5"
            >
              20
              %
            </div>
            <div
              class="c17"
            >
              <svg
                fill="none"
                height="1em"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="1em"
                xmlns="http://www.w3.org/2000/svg"
              >
                <circle
                  cx="12"
                  cy="12"
                  r="10"
                />
              </svg>
            </div>
            <div
              class="c1 c5"
            >
              10
              %
            </div>
          </div>
        </div>
      </div>
    </div>
  </a>
   
</div>
`;

exports[`ProposalCard ProposalCard loading 1`] = `
.c10 {
  font-family: 'Inter',-apple-system,BlinkMacSystemFont,'Segoe UI','Roboto','Oxygen','Ubuntu','Cantarell','Fira Sans','Droid Sans','Helvetica Neue',sans-serif;
  font-size: 20px;
  line-height: 1.2;
  font-weight: 600;
}

.c1 {
  box-sizing: 'border-box';
  min-width: 0;
  margin: 0;
  padding: 0;
}

.c2 {
  border: 1px solid #303338;
  border-radius: 10px;
  margin-bottom: 1rem;
  padding: 1rem;
  color: #BDC0C7;
}

.c2:hover {
  cursor: default;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c9 {
  margin: 1rem 0;
}

.c12 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c11 {
  font-size: 1rem;
  font-weight: 700;
  color: #fff;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c5 {
  font-size: 0.95rem;
  font-weight: 600;
  margin-left: 0.5rem;
}

.c13 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  margin-right: 24px;
  position: relative;
  overflow-x: hidden;
}

.c13::before {
  content: '';
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  width: 100%;
  height: 100%;
  background: linear-gradient(to right,transparent 89%,#1B1D1F 100%);
}

.c13 > div {
  margin: 4px 2px;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.c7 {
  font-size: 0.8rem;
  font-weight: 600;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c8 {
  padding: 0 0.2rem;
}

.c0 {
  -webkit-text-decoration: none;
  text-decoration: none;
  color: #fff;
}

.c0:focus,
.c0:hover,
.c0:visited,
.c0:link,
.c0:active {
  -webkit-text-decoration: none;
  text-decoration: none;
}

@media only screen and (max-width:524px) {
  .c12 {
    -webkit-flex-direction: column;
    -ms-flex-direction: column;
    flex-direction: column;
    -webkit-align-items: flex-start;
    -webkit-box-align: flex-start;
    -ms-flex-align: flex-start;
    align-items: flex-start;
  }
}

@media only screen and (min-width:768px) {
  .c11 {
    font-size: 1.25rem;
  }
}

@media only screen and (max-width:524px) {
  .c13 {
    -webkit-flex-wrap: wrap;
    -ms-flex-wrap: wrap;
    flex-wrap: wrap;
    border-bottom: 1px solid #303338;
    margin-bottom: 0.5rem;
    padding-bottom: 0.5rem;
  }

  .c13 > div:nth-child(n + 3) {
    display: none;
  }

  .c13::before {
    content: none;
  }
}

@media only screen and (min-width:768px) {
  .c8 {
    padding-right: 0.5rem;
  }
}

<div>
   
  <a
    class="c0"
    data-testid="proposal-card"
    href="/"
  >
    <div
      class="c1 c2"
      disabled=""
    >
      <div
        class="c1 c3"
      >
        <div
          class="c1 c4"
        >
          <div
            class=""
          >
            <span
              aria-busy="true"
              aria-live="polite"
            >
              <span
                class="react-loading-skeleton"
                style="width: 24px; height: 24px; border-radius: 50%; --base-color: #333; --highlight-color: #555;"
              >
                ‌
              </span>
              <br />
            </span>
          </div>
          <div
            class="c1 c5"
          >
            <div
              class=""
              style="margin: 0px;"
            >
              <span
                aria-busy="true"
                aria-live="polite"
              >
                <span
                  class="react-loading-skeleton"
                  style="width: 100px; height: 16px; border-radius: 50px; --base-color: #333; --highlight-color: #555;"
                >
                  ‌
                </span>
                <br />
              </span>
            </div>
          </div>
        </div>
        <div
          class="c6"
        >
          <div
            class="c7"
          >
            <div
              class="c1 c8"
            >
              <div
                class=""
              >
                <span
                  aria-busy="true"
                  aria-live="polite"
                >
                  <span
                    class="react-loading-skeleton"
                    style="width: 50px; --base-color: #333; --highlight-color: #555;"
                  >
                    ‌
                  </span>
                  <br />
                </span>
              </div>
            </div>
            <div
              class=""
            >
              <span
                aria-busy="true"
                aria-live="polite"
              >
                <span
                  class="react-loading-skeleton"
                  style="width: 50px; --base-color: #333; --highlight-color: #555;"
                >
                  ‌
                </span>
                <br />
              </span>
            </div>
          </div>
        </div>
      </div>
      <div
        class="c1 c9"
      >
        <h2
          class="c10 c11"
          size="2"
        >
          <strong>
            <div
              class=""
              style="margin: 0px;"
            >
              <span
                aria-busy="true"
                aria-live="polite"
              >
                <span
                  class="react-loading-skeleton"
                  style="width: 100px; height: 16px; border-radius: 50px; --base-color: #333; --highlight-color: #555;"
                >
                  ‌
                </span>
                <br />
              </span>
            </div>
          </strong>
        </h2>
      </div>
      <div
        class="c1 c12"
      >
        <div
          class="c1 c13"
        />
        <div
          class=""
          style="margin: 0px;"
        >
          <span
            aria-busy="true"
            aria-live="polite"
          >
            <span
              class="react-loading-skeleton"
              style="width: 200px; --base-color: #333; --highlight-color: #555;"
            >
              ‌
            </span>
            <br />
          </span>
        </div>
      </div>
    </div>
  </a>
   
</div>
`;
